# todo-ca-fastapi

./: .gitignore  asgi.py  pyproject.toml
tests/entrypoints/fastapi_app/: test_api.py
tests/request_objects/: test_get_todo.py
tests/use_case/: test_get_todo_detail.py  test_get_todo_list.py
todo_ca/entrypoints/fastapi_app/: __init__.py
todo_ca/entrypoints/fastapi_app/routers/: todos.py
todo_ca/entrypoints/fastapi_app/schema/: todos.py
todo_ca/request_objects/: __init__.py  get_todo.py
todo_ca/shared/: __init__.py
todo_ca/use_case/: get_todo_detail.py  get_todo_list.py
